# mmperf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README-2.md  README.md  benchmark_sizes.txt  env_setup.sh  generate_configs.py  generate_tile_size_sandbox.py  install_deps.sh  iree_sandbox_matmul.py  make.sh  mmperf.py  nico.patch  nodai_config_parser.py  nodai_sandbox_matmul_results.json  plot_results.py  requirements.txt  shared.cmake  update_submodules.sh
.github/workflows/: ci.yaml  cmake.yml
Codegen/: .gitignore  CMakeLists.txt  README.md  benchmark_sizes.txt  plot_results.py
Codegen/halide/: matmul_1020x1152x1152_halide_perf.out  matmul_1024x1024x1024_halide_perf.out  matmul_24x64x96_halide_perf.out  matmul_48x64x128_halide_perf.out
Codegen/matmul/: CMakeLists.txt  main.c
Codegen/matmul/halide/: CMakeLists.txt
Codegen/matmul/halide/src/: blas_l1_generators.cpp  blas_l3_generators.cpp  halide_blas.h
Codegen/matmul/matmul-compile/: CMakeLists.txt  matmul-compile.cpp
Codegen/matmul/mlir/: generate_mlir.py  matmul_1020x1152x1152.mlir  matmul_1024x1024x1024.mlir  matmul_18x32x96.mlir  matmul_1920x2304x2304.mlir  matmul_192x128x128.mlir  matmul_192x256x256.mlir  matmul_192x64x128.mlir  matmul_2304x2304x2560.mlir  matmul_24x64x512.mlir  matmul_24x64x96.mlir  matmul_384x256x256.mlir  matmul_480x512x16.mlir  matmul_480x512x256.mlir  matmul_48x64x128.mlir
Codegen/mkl/: matmul_1020x1152x1152_mkl_perf.out  matmul_1024x1024x1024_mkl_perf.out  matmul_18x32x96_mkl_perf.out  matmul_1920x2304x2304_mkl_perf.out  matmul_192x128x128_mkl_perf.out  matmul_192x256x256_mkl_perf.out  matmul_192x64x128_mkl_perf.out  matmul_2304x2304x2560_mkl_perf.out  matmul_24x64x96_mkl_perf.out  matmul_384x256x256_mkl_perf.out  matmul_480x512x16_mkl_perf.out  matmul_480x512x256_mkl_perf.out  matmul_48x64x128_mkl_perf.out
Codegen/openblas/: matmul_1020x1152x1152_openblas_perf.out  matmul_1024x1024x1024_openblas_perf.out  matmul_1920x2304x2304_openblas_perf.out  matmul_192x256x256_openblas_perf.out  matmul_192x64x128_openblas_perf.out  matmul_480x512x16_openblas_perf.out  matmul_480x512x256_openblas_perf.out  matmul_48x64x128_openblas_perf.out
Codegen/ruy/: matmul_1920x2304x2304_ruy_perf.out  matmul_192x64x128_ruy_perf.out  matmul_384x256x256_ruy_perf.out  matmul_480x512x256_ruy_perf.out  matmul_48x64x128_ruy_perf.out
LLVM-IR-E2E/: README.md
LLVM-IR-E2E/tf_abs/: abs_gen.sh  mlir_reproducer_pleaseremovehostname-e6b4553d-2112-5b00898d0d240.mlir  out.vb  tf_abs.mlir
LLVM-IR-E2E/tf_mnist/: mnist_gen.sh
asm/: mlir_matmul_192x256x256_m1.asm  mlir_matmul_480x512x16.asm  mlir_matmul_480x512x16_m1.asm
benchmark_sizes/: benchmark_all_sizes.txt  benchmark_inceptionv3.txt  benchmark_mobilenetv3_large.txt  benchmark_resnet50.txt  benchmark_small_sizes.txt  benchmark_tiny.txt  bert_large_matmul.txt  bert_minilm_l12_h384_matmul.txt  mobilebert.txt  torch_bench.txt
ci/: build.sh  setup-build-env-ubuntu-20.04-x86_64.sh  test.sh
cmake/: common.cmake
docs/: debugging.md
halide/: matmul_1920x2304x2304_halide_perf.out  matmul_192x128x128_halide_perf.out  matmul_192x256x256_halide_perf.out  matmul_192x64x128_halide_perf.out  matmul_24x64x512_halide_perf.out  matmul_384x256x256_halide_perf.out  matmul_480x512x16_halide_perf.out  matmul_480x512x256_halide_perf.out
matmul/: CMakeLists.txt  batch_matmul_mlir_BxMxNxK.mlir.in  compile.sh  llvm_tile.py  main.c  main.cc  matmul-gpu.mlir.in  matmul_column_major_mlir_MxNxK.mlir.in  matmul_llvmsandbox_MxNxK.mlir  matmul_mlir_MxNxK.mlir.in  matmul_mlir_cuda_MxNxK.mlir.in  matmul_mlircuda_MxNxK.mlir.in  tiling.json  tiling_for_large.json  tiling_for_small.json
matmul-iree/: CMakeLists.txt
matmul-iree/cmake/: matmul-iree-common.cmake
matmul-iree/src/: CMakeLists.txt  batch_matmul_BxMxNxK.mlir  device_cuda.c  device_dylib.c  device_vmvx.c  matmul.mlir  matmul_MxNxK.mlir  matmul_generator.c  matmul_generator.cc  matmul_linalg_MxNxK.mlir
matmul-iree/src/tiling/: CMakeLists.txt  add-tiling-attribute-pass.cpp  compile_options.fbs
matmul-iree/src/tiling/example/: iree-tiling.json  matmul_linalg.json  matmul_linalg_cuda.json  matmul_mhlo.json  matmul_multi.json  matmul_multi.mlir  tile-matmul.sh
matmul/halide/src/: CMakeLists.txt  blas_l1_generators.cpp  blas_l2_generators.cpp  blas_l3_generators.cpp  halide_blas.cpp
matmul/matmul-compile/: CMakeLists.txt  compile_options.fbs  matmul-compile.cpp
mkl/: matmul_1020x1152x1152_mkl_perf.out  matmul_18x32x96_mkl_perf.out  matmul_192x256x256_mkl_perf.out  matmul_2304x2304x2560_mkl_perf.out  matmul_24x64x512_mkl_perf.out  matmul_384x256x256_mkl_perf.out  matmul_480x512x16_mkl_perf.out  matmul_480x512x256_mkl_perf.out
official_results/apple-m1max/: arch-info  matmul_accelerate_100x320x1280_perf.out  matmul_accelerate_100x384x1280_perf.out  matmul_accelerate_100x384x4032_perf.out  matmul_accelerate_100x448x1280_perf.out  matmul_accelerate_1024x1024x1024_perf.out  matmul_accelerate_1024x1024x512_perf.out  matmul_accelerate_1024x3072x512_perf.out  matmul_accelerate_12544x64x147_perf.out  matmul_accelerate_1369x48x256_perf.out  matmul_accelerate_1369x64x192_perf.out  (+356 more)
openblas/: matmul_192x128x128_openblas_perf.out  matmul_2304x2304x2560_openblas_perf.out  matmul_24x64x512_openblas_perf.out  matmul_384x256x256_openblas_perf.out
ruy/: matmul_1020x1152x1152_ruy_perf.out  matmul_1024x1024x1024_ruy_perf.out  matmul_18x32x96_ruy_perf.out  matmul_192x128x128_ruy_perf.out  matmul_192x256x256_ruy_perf.out  matmul_24x64x512_ruy_perf.out  matmul_24x64x96_ruy_perf.out  matmul_480x512x16_ruy_perf.out
setup/: configure.sh  setup-build-env-ubuntu-20.04-x86_64.sh
tf_abs/: abs_gen.sh
tf_mnist/: mnist_gen.sh
tvm_tuner/: README.md  matmul_1024x1024x1.json  matmul_1024x1024x512.json  matmul_1024x3072x512.json  matmul_1024x5x1.json  matmul_16x1024x512.json  matmul_16x512x512.json  matmul_16x512x64.json  matmul_16x64x512.json  matmul_1x1024x1024.json  matmul_1x1024x5.json  matmul_1x5x1024.json  matmul_3072x1024x512.json  matmul_512x1024x3072.json  matmul_512x3072x1024.json  tune_matmul.py  tuner.py
(+1954 files in other folders)
